force-app/main/default/objects/Outbound_Mail__c.object
<CustomObject>
    <description>This object tracks the outbound mail and email sent as part of the contractor on-boarding process</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Returns the account name for the related opportunity.</description>
        <formula>Related_Opportunity_2__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Use this field to capture any additional information related to the mailing or phases of the mailing.</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Outbound Mail</relationshipLabel>
        <relationshipName>Outbound_Mail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Site__c</fullName>
        <label>Client Site</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractors_Mailed__c</fullName>
        <inlineHelpText>Enter the actual number of contractors included in the mailing</inlineHelpText>
        <label>Contractors Mailed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractors_Self_Registered__c</fullName>
        <description>Captures the number of self registered contractors that responded to the mail or email</description>
        <label>Contractors Self Registered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creative_Package__c</fullName>
        <description>this field is used to capture the mail package delivered to the contractors.  This is used to measure the effectiveness of various scripts and compare A B results.</description>
        <inlineHelpText>Enter the creative package or mail script ID</inlineHelpText>
        <label>Creative Package</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Mailed__c</fullName>
        <inlineHelpText>Enter the date the mail was sent (date delivered to post office or date email was sent).</inlineHelpText>
        <label>Date Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JIRA_Ticket__c</fullName>
        <inlineHelpText>Enter the JIRA ticket number</inlineHelpText>
        <label>JIRA Ticket #</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Effort__c</fullName>
        <inlineHelpText>Select the approriate mailing effort (is this the first time the list has been mailed) related to the Mail Type.  It is possible to have a first physical mail and first email.</inlineHelpText>
        <label>Mail Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                    <default>true</default>
                    <label>First</label>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Fourth</fullName>
                </value>
                <value>
                    <fullName>Fifth</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Primer</fullName>
                </value>
                <value>
                    <fullName>Registration Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Type__c</fullName>
        <label>Mail Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Physical Mail</fullName>
                </value>
                <value>
                    <fullName>2nd Physical Mail</fullName>
                </value>
                <value>
                    <fullName>3rd Physical Mail</fullName>
                </value>
                <value>
                    <fullName>4th Physical Mail</fullName>
                </value>
                <value>
                    <fullName>5th Physical Mail</fullName>
                </value>
                <value>
                    <fullName>First Email</fullName>
                </value>
                <value>
                    <fullName>Second Email</fullName>
                </value>
                <value>
                    <fullName>Third Email</fullName>
                </value>
                <value>
                    <fullName>Fourth Email</fullName>
                </value>
                <value>
                    <fullName>Fifth Email</fullName>
                </value>
                <value>
                    <fullName>Re-launch Physical Mail</fullName>
                </value>
                <value>
                    <fullName>Re-launch Email</fullName>
                </value>
                <value>
                    <fullName>Expansion Physical Mail</fullName>
                </value>
                <value>
                    <fullName>Expansion Email</fullName>
                </value>
                <value>
                    <fullName>Client Self-mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Follow-On</fullName>
                </value>
                <value>
                    <fullName>Primer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month_Mailed__c</fullName>
        <formula>MONTH( Date_Mailed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Mailed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Boarding_Report__c</fullName>
        <description>hyperlink field to render On-boarding report for selected Client Account</description>
        <formula>HYPERLINK(&quot;00O70000004UQGu?pv0=&quot;+ Account__c , &quot;View&quot;,&quot;_top&quot;)</formula>
        <label>On-Boarding Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Mailed__c</fullName>
        <formula>IF(
OR(MONTH(  Date_Mailed__c ) = 1,MONTH( Date_Mailed__c) = 2,MONTH( Date_Mailed__c) = 3),&quot;Q1&quot;,
IF(OR(MONTH( Date_Mailed__c) = 4,MONTH( Date_Mailed__c) = 5,MONTH( Date_Mailed__c) = 6),&quot;Q2&quot;,
IF(OR(MONTH( Date_Mailed__c) = 7,MONTH( Date_Mailed__c) = 8,MONTH( Date_Mailed__c) = 9),&quot;Q3&quot;,
&quot;Q4&quot;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Mailed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Request_Report__c</fullName>
        <description>Hyperlink field to render registration request report for selected Client Account.</description>
        <formula>HYPERLINK(&quot;00O70000004UWcc?pv0=&quot;+ Account__c , &quot;View&quot;,&quot;_top&quot;)</formula>
        <label>Registration Request Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_2__c</fullName>
        <inlineHelpText>Select the Opportunity that the mail effort supports</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Outbound Mail</relationshipLabel>
        <relationshipName>Outbound_Mail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Week_Mailed__c</fullName>
        <formula>IF(CEILING(CASE(MONTH( Date_Mailed__c),
1, (DAY(Date_Mailed__c)+0)/7,
2, (DAY(Date_Mailed__c)+31)/7,
3, (DAY(Date_Mailed__c)+59)/7,
4, (DAY(Date_Mailed__c)+0)/7,
5, (DAY(Date_Mailed__c)+31)/7,
6, (DAY(Date_Mailed__c)+61)/7,
7, (DAY(Date_Mailed__c)+0)/7,
8, (DAY(Date_Mailed__c)+31)/7,
9, (DAY(Date_Mailed__c)+62)/7,
10,(DAY(Date_Mailed__c)+0)/7,
11,(DAY(Date_Mailed__c)+31)/7,
(DAY(Date_Mailed__c)+61)/7))&gt;13,13,
CEILING(CASE(MONTH(Date_Mailed__c),
1, (DAY(Date_Mailed__c)+0)/7,
2, (DAY(Date_Mailed__c)+31)/7,
3, (DAY(Date_Mailed__c)+59)/7,
4, (DAY(Date_Mailed__c)+0)/7,
5, (DAY(Date_Mailed__c)+31)/7,
6, (DAY(Date_Mailed__c)+61)/7,
7, (DAY(Date_Mailed__c)+0)/7,
8, (DAY(Date_Mailed__c)+31)/7,
9, (DAY(Date_Mailed__c)+62)/7,
10,(DAY(Date_Mailed__c)+0)/7,
11,(DAY(Date_Mailed__c)+31)/7,
(DAY(Date_Mailed__c)+61)/7))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Mailed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Mailed__c</fullName>
        <formula>YEAR( Date_Mailed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Mailed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Quarter_mailed__c</fullName>
        <formula>TEXT(YEAR (Date_Mailed__c ))+ &apos; &apos; + 
CASE(
    MONTH(Date_Mailed__c),

    1,&apos;Q1&apos;, 
    2,&apos;Q1&apos;, 
    3,&apos;Q1&apos;, 
    4,&apos;Q2&apos;, 
    5,&apos;Q2&apos;, 
    6,&apos;Q2&apos;, 
    7,&apos;Q3&apos;, 
    8,&apos;Q3&apos;, 
    9,&apos;Q3&apos;, 
    10,&apos;Q4&apos;, 
    11,&apos;Q4&apos;, 
    12,&apos;Q4&apos;,  

    NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year-Quarter mailed</label>
        <type>Text</type>
    </fields>
    <label>Outbound Mail</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>JIRA_Ticket__c</columns>
        <columns>Related_Opportunity_2__c</columns>
        <columns>Mail_Type__c</columns>
        <columns>Contractors_Mailed__c</columns>
        <columns>Mail_Effort__c</columns>
        <columns>Date_Mailed__c</columns>
        <columns>Week_Mailed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mail_Effort__c</field>
            <operation>equals</operation>
            <value>First</value>
        </filters>
        <filters>
            <field>Year_Mailed__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Continuing_Communications</fullName>
        <columns>NAME</columns>
        <columns>JIRA_Ticket__c</columns>
        <columns>Related_Opportunity_2__c</columns>
        <columns>Client_Site__c</columns>
        <columns>Mail_Type__c</columns>
        <columns>Date_Mailed__c</columns>
        <columns>Contractors_Mailed__c</columns>
        <columns>Creative_Package__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mail_Effort__c</field>
            <operation>notEqual</operation>
            <value>First</value>
        </filters>
        <label>Continuing Communications</label>
    </listViews>
    <listViews>
        <fullName>First_Mailing_Communications_Prior_Month</fullName>
        <columns>Account__c</columns>
        <columns>Related_Opportunity_2__c</columns>
        <columns>Week_Mailed__c</columns>
        <columns>Client_Site__c</columns>
        <columns>Contractors_Mailed__c</columns>
        <columns>JIRA_Ticket__c</columns>
        <columns>Mail_Type__c</columns>
        <columns>Date_Mailed__c</columns>
        <columns>Mail_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mail_Effort__c</field>
            <operation>equals</operation>
            <value>First</value>
        </filters>
        <filters>
            <field>Date_Mailed__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2016</value>
        </filters>
        <filters>
            <field>Date_Mailed__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </filters>
        <label>First Mailing Communications Prior Month</label>
    </listViews>
    <listViews>
        <fullName>First_Mailing_Communications_Quarter_2</fullName>
        <columns>Related_Opportunity_2__c</columns>
        <columns>Week_Mailed__c</columns>
        <columns>Client_Site__c</columns>
        <columns>Contractors_Mailed__c</columns>
        <columns>JIRA_Ticket__c</columns>
        <columns>Mail_Type__c</columns>
        <columns>Date_Mailed__c</columns>
        <columns>Mail_Effort__c</columns>
        <columns>NAME</columns>
        <columns>Additional_Information__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mail_Effort__c</field>
            <operation>equals</operation>
            <value>First</value>
        </filters>
        <filters>
            <field>Date_Mailed__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2018</value>
        </filters>
        <label>First Mailing Communications (Quarter 4)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>First_Mailing_Communications_qtr</fullName>
        <columns>Related_Opportunity_2__c</columns>
        <columns>Week_Mailed__c</columns>
        <columns>Client_Site__c</columns>
        <columns>Contractors_Mailed__c</columns>
        <columns>JIRA_Ticket__c</columns>
        <columns>Mail_Type__c</columns>
        <columns>Date_Mailed__c</columns>
        <columns>Mail_Effort__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mail_Effort__c</field>
            <operation>equals</operation>
            <value>First</value>
        </filters>
        <filters>
            <field>Date_Mailed__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <label>First Mailing Communications (Quarter 1)</label>
    </listViews>
    <listViews>
        <fullName>Physical_Mail</fullName>
        <columns>NAME</columns>
        <columns>JIRA_Ticket__c</columns>
        <columns>Related_Opportunity_2__c</columns>
        <columns>Client_Site__c</columns>
        <columns>Date_Mailed__c</columns>
        <columns>Mail_Type__c</columns>
        <columns>Mail_Effort__c</columns>
        <columns>Quarter_Mailed__c</columns>
        <columns>Contractors_Mailed__c</columns>
        <columns>Contractors_Self_Registered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mail_Type__c</field>
            <operation>equals</operation>
            <value>Physical Mail</value>
        </filters>
        <label>Physical Mail</label>
    </listViews>
    <listViews>
        <fullName>Recent_Client_Launches</fullName>
        <columns>JIRA_Ticket__c</columns>
        <columns>Related_Opportunity_2__c</columns>
        <columns>Account__c</columns>
        <columns>Date_Mailed__c</columns>
        <columns>Contractors_Mailed__c</columns>
        <columns>Mail_Effort__c</columns>
        <columns>Mail_Type__c</columns>
        <columns>On_Boarding_Report__c</columns>
        <columns>Registration_Request_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Mailed__c</field>
            <operation>greaterThan</operation>
        </filters>
        <filters>
            <field>Mail_Effort__c</field>
            <operation>equals</operation>
            <value>First,Registration Request</value>
        </filters>
        <label>Recent Client Launches</label>
    </listViews>
    <listViews>
        <fullName>email</fullName>
        <columns>NAME</columns>
        <columns>JIRA_Ticket__c</columns>
        <columns>Related_Opportunity_2__c</columns>
        <columns>Client_Site__c</columns>
        <columns>Date_Mailed__c</columns>
        <columns>Mail_Type__c</columns>
        <columns>Mail_Effort__c</columns>
        <columns>Quarter_Mailed__c</columns>
        <columns>Contractors_Mailed__c</columns>
        <columns>Contractors_Self_Registered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mail_Type__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>email</label>
    </listViews>
    <nameField>
        <displayFormat>OBM-{000000}</displayFormat>
        <label>Outbound Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Mail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>